--- a/Proyecto01/src/main/java/UserInterface/main.form
+++ b/Proyecto01/src/main/java/UserInterface/main.form
@@ -102,7 +102,13 @@
           <Color id="Default Cursor"/>
         </Property>
         <Property name="focusTraversalPolicyProvider" type="boolean" value="true"/>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[600, 500]"/>
+        </Property>
         <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[600, 500]"/>
+        </Property>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
           <Dimension value="[600, 500]"/>
         </Property>
         <Property name="resizable" type="boolean" value="false"/>
